--- a/_posts/0000-01-02-Islam2024.md
+++ b/_posts/0000-01-02-Islam2024.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our github-teacher slide!"
 ---
 
 this is islam2024 slide
