--- a/_posts/0000-01-02-Islam2024.md
+++ b/_posts/0000-01-02-Islam2024.md
@@ -3,5 +3,5 @@ layout: slide
 title: "Welcome to our github-teacher slide!"
 ---
 
-this is islam2024 slide
+this is islam2024 slide:tada:
 Use the left arrow to go back!
